k8s-configuration/glbc-controller/glbc_ingress_rules.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "gce"
  name: shippy-ingress
  namespace: shippy-grpc
spec:
  tls:
  - hosts:
    - shippy.example.com
    secretName: shippy-secret
  rules:
  - host: shippy.example.com
    http:
      paths:
      - path: /ui
        backend:
          serviceName: client
          servicePort: 5000 
      - path: /getConsignment
        backend:
          serviceName: client
          servicePort: 5000
      - path: /getVessel
        backend:
          serviceName: client
          servicePort: 5000
      - path: /Vessel/GetVessel
        backend:
          serviceName: vessel
          servicePort: 50052
      - path: /Shipping/GetConsignment
        backend:
          serviceName: consignment
          servicePort: 50051
      - path: /Shipping/GetVesselForConsignment
        backend:
          serviceName: consignment
          servicePort: 50051
